Terraform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb  # Specifies that ALB Controller will manage this Ingress
    alb.ingress.kubernetes.io/scheme: internet-facing  # Public ALB
    alb.ingress.kubernetes.io/target-type: ip  # Targets pods directly
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'

# need to fill below values later
spec:
  rules:
    - host: itsag3t1.com  # Route 53 domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service-1
                port:
                  number: 80

          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: backend-service-2
                port:
                  number: 80
